# VBVR-InferKit

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  env.template  history.md  pyproject.toml
docs/: ADDING_MODELS.md  DATA_GENERATOR.md  FAQ.md  INFERENCE.md  MODELS.md
docs/AGENT_STYLE/: CODESTYLE.md  RESIZE.md
examples/: generate_videos.py
setup/: install_model.sh  test_model.sh
setup/lib/: share.sh
setup/models/LTX-2/: setup.sh
setup/models/cogvideox-5b-i2v/: requirements.txt  setup.sh
setup/models/cogvideox1.5-5b-i2v/: requirements.txt  setup.sh
setup/models/hunyuan-video-i2v/: requirements.txt  setup.sh
setup/models/kling-v1-6/: setup.sh
setup/models/kling-v2-1-master/: setup.sh
setup/models/kling-v2-5-turbo/: setup.sh
setup/models/kling-v2-6/: requirements.txt  setup.sh
setup/models/kling-v2-master/: setup.sh
setup/models/ltx-video/: requirements.txt  setup.sh
setup/models/ltx-video-13b-distilled/: setup.sh
setup/models/luma-ray-2/: setup.sh
setup/models/luma-ray-flash-2/: requirements.txt  setup.sh
vbvrevalkit/: __init__.py
vbvrevalkit/models/: _subprocess_worker.py  base.py  cogvideox_inference.py  hunyuan_inference.py  ltx2_inference.py  luma_inference.py  morphic_inference.py  openai_inference.py  runway_inference.py  sana_inference.py  veo_inference.py  wan_inference.py
vbvrevalkit/runner/: MODEL_CATALOG.py  __init__.py  inference.py
vbvrevalkit/utils/: s3_uploader.py
vbvrinferkit/: __init__.py
vbvrinferkit/models/: __init__.py  _subprocess_worker.py  base.py  cogvideox_inference.py  hunyuan_inference.py  kling_inference.py  ltx2_inference.py  ltx_inference.py  luma_inference.py  morphic_inference.py  openai_inference.py  runway_inference.py  sana_inference.py  seedance_inference.py  svd_inference.py  veo_inference.py  wavespeed_inference.py
vbvrinferkit/runner/: MODEL_CATALOG.py  __init__.py  inference.py
vbvrinferkit/utils/: __init__.py  image.py  s3_uploader.py
(+37 files in other folders)
